[package]
name = "com-wrapper"
version = "0.1.0-alpha1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/com-wrapper"
license = "MIT"
description = """
An interface for types which are a wrapper around a `wio::com::ComPtr`.
"""

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"
wio = "0.2.0"

[dev-dependencies.derive-com-wrapper]
path = "derive-com-wrapper"

[dev-dependencies.winapi]
version = "0.3.6"
features = ["unknwnbase"]
