[package]
name = "com-wrapper"
version = "0.1.0-alpha2"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/com-wrapper"
license = "MIT"
description = """
An interface for types which are a wrapper around a `wio::com::ComPtr`.
"""

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"
wio = "0.2.0"

[dev-dependencies.derive-com-wrapper]
version = "0.1.0-alpha4"
#path = "derive-com-wrapper"

[dev-dependencies.winapi]
version = "0.3.6"
features = ["unknwnbase"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
