[package]
name = "com-wrapper"
version = "0.1.0"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/com-wrapper"
license = "MIT"
description = """
An interface for types which are a wrapper around a `wio::com::ComPtr`.
"""

[workspace]
members = ["derive-com-wrapper"]

[target.'cfg(windows)'.dependencies]
wio = "0.2.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["unknwnbase"]

[target.'cfg(windows)'.dependencies.derive-com-wrapper]
version = "0.1.0"
path = "derive-com-wrapper"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
