[package]
name = "derive-com-wrapper"
version = "0.1.0-alpha3"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/com-wrapper"
license = "MIT"
edition = "2015"
description = """
Procedural derive macro for the `com-wrapper` crate, useful for types which are just
a safe wrapper around a `wio::com::ComPtr`.
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["derive", "extra-traits"] }
quote = "0.6.8"
proc-macro2 = "0.4.20"
