[package]
name = "derive-com-wrapper"
version = "0.1.0"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/com-wrapper"
license = "MIT"
edition = "2015"
description = """
Procedural derive macro for the `com-wrapper` crate, useful for types which are just
a safe wrapper around a `wio::com::ComPtr`.
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["derive"] }
quote = "0.6.8"
proc-macro2 = "0.4.20"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
